--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
 
+  <div id="vis"></div>
+
+  <script src="lib/d3/d3.js" charset="utf-8"></script>
+  <script src="js/chart.js" charset="utf-8"></script>
+
+  <script>
+    sunChart.drawChart();
+  </script>
+
 </body>
 </html>
