--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sunrise/Sunset</title>
 
-  <link rel="stylesheet" href="css/style.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Sunrise/Sunset</title>
+
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
 
-  <div id="vis"></div>
 
-  <script src="lib/d3/d3.js" charset="utf-8"></script>
-  <script src="js/chart.js" charset="utf-8"></script>
+    <div id="form-holder" class="container">
+      <div class="col-md-4">
+        <input class="form-control" type="text" placeholder="State">
+      </div>
+      <div class="col-md-4">
+        <input class="form-control" type="text" placeholder="City">
+      </div>
+      <div class="col-md-4">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
 
-  <script>
-    sunChart.drawChart();
-  </script>
+    <div id="vis-holder" class="container">
+      <div class="row">
+        <div id="vis"></div>
+      </div>
+    </div>
+
+
+
+    <script src="lib/d3/d3.js" charset="utf-8"></script>
+    <script src="js/chart.js" charset="utf-8"></script>
+
+    <script>
+        sunChart.drawChart();
+    </script>
 
 </body>
+
 </html>
