Made drawing functions more modular

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
     </div>
 
-
+    <!--
     <div id="functionality-holder" class="container">
-      <div class="row">
-        <div class="col-sm-12 text-center">
-          Here's some Functionality
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                Here's some Functionality
+            </div>
         </div>
-      </div>
         <div class="row">
             <div class="col-sm-4">
                 <button class="btn btn-default" id="lines-button">Toggle Lines</button>
@@ -46,6 +46,7 @@
             </div>
         </div class="row">
     </div>
+  -->
 
     <div id="vis-holder" class="container">
         <div class="row">
@@ -59,7 +60,7 @@
     <script src="js/chart.js" charset="utf-8"></script>
 
     <script>
-        sunChart.drawChart();
+        sunChart.drawChart(sunChart.dim);
     </script>
 
 </body>
