--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <div id="form-holder" class="container">
         <div class="row">
             <div class="col-md-4">
-                <input id="state-input" class="form-control" type="text" placeholder="State">
+              When the sun rises and sets in:
             </div>
             <div class="col-md-4">
-                <input id="city-input" class="form-control" type="text" placeholder="City">
+                <select id="state-input" class="form-control" onchange="sunChart.change()"> 
+                </select>
             </div>
             <div class="col-md-4">
-                <button type="submit" class="btn btn-default" onclick="dataLoad.updateForm()">Submit</button>
+                <button type="submit" class="btn btn-default" onclick="parser.submitText()">Submit</button>
             </div>
         </div>
     </div>
@@ -58,10 +59,12 @@
 
     <script src="lib/d3/d3.js" charset="utf-8"></script>
     <script src="js/chart.js" charset="utf-8"></script>
-    <script src="js/page-request.js" charset="utf-8"></script>
+
 
     <script>
-        sunChart.drawChart(sunChart.dim);
+        sunChart.drawChart("data/cities/miamiFL.json", sunChart.dim);
+      //  sunChart.update("data/cities/miami.json", sunChart.dim);
+        sunChart.drop();
     </script>
 
 </body>
